Enabling security manager for secure testing.